k8s/omnibus-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: omnibus
  labels:
    name: omnibus
    version: 1.0
